fix: fix responsiveness on mobile resolutions
Close #3

--- a/src/main/resources/META-INF/frontend/styles/fc-days-of-week-selector-styles.css
+++ b/src/main/resources/META-INF/frontend/styles/fc-days-of-week-selector-styles.css
@@ -43,3 +43,10 @@ vaadin-custom-field[readonly] vaadin-button.fc-days-of-week-selector-button[disa
 vaadin-custom-field[readonly] vaadin-button.fc-days-of-week-selector-button[theme~='primary'][disabled] {
     border: var(--vaadin-input-field-readonly-border, 1px dashed var(--lumo-contrast-30pct));
 }
+
+vaadin-horizontal-layout.fc-days-of-week-selector-buttons-layout {
+    width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 0 10px;
+}
